02-Instances-setup/Minio-s3-bucket/minimal-setup-yamls/03-Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-pvc
      containers:
        - name: minio
          image: 'quay.io/minio/minio:latest'
          resources:
            requests:
              memory: "512Mi"
              cpu: "550m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          args:
            - server
            - /data
            - '--console-address'
            - ':9090'
          ports:
            - containerPort: 9000
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
              subPath: minio
