02-Instances-setup/Minio-s3-bucket/minimal-setup-yamls/04-Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: minio-service
spec:
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: ui
      protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    app: minio
